# iced_launcher

./: Cargo.toml
src/: applications.rs  main.rs
