[package]
name = "ulauncher"
authors = ["Decodertalkers <aakari@tutanota.com>"]
edition = "2021"
version = "0.1.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"image",
	"svg",
] }
iced_runtime = "0.12"
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop", package = "iced_layershell" }
gio = "0.19.2"
regex = "1.10.3"
xdg = "2.5.2"
once_cell = "1.19.0"
tracing = "0.1.40"
